# console-wingman

./: CHANGELOG.md  README.md  cli-lookup.cabal
app/: Args.hs  Gemini.hs  Lib.hs  Main.hs
cli/bash/: cli-lookup.sh  console-wingman.sh
cli/pwsh/: cli-lookup.ps1  console-wingman.ps1
cli/zsh/: cli-lookup.zsh
